Cyberduck
FTP, SFTP, WebDAV, Cloud Files, Google Docs, Windows Azure & Amazon S3 Browser for Mac & Windows.
http://cyberduck.ch/

Changelog. Last modified: $Date$

4.0.2 [http://trac.cyberduck.ch/milestone/4.0.2]
- [Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)
- [Bugfix] Incomplete transfer synchronizing root directory (WebDAV) (#5662)
- [Bugfix] Wrong version downloaded (S3 Versioning) (#5758)
- [Bugfix] Interoperability (FTP) (#5763, #5757, #5772, #5771)
- [Bugfix] Wrong local path for uploads with file chooser (Windows) (#5590)

4.0.1 [http://trac.cyberduck.ch/milestone/4.0.1]
- [Bugfix] Uploading folders fails to create directories (#5749)

4.0 [http://trac.cyberduck.ch/milestone/4.0]
- [Localize] Ukrainian Localization
- [Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.
- [Feature] Replaced protocol implementation (FTP)
- [Feature] Connecting to Windows Azure Blob Storage (#3938)
- [Feature] Connecting to Dropbox
- [Feature] Copy and paste files using menu item to duplicate
- [Feature] Multipart Uploads with parallelism (S3) (#5487)
- [Feature] Support new 5TB Object Size Limit (S3)
- [Feature] Upload item in Finder context menu to upload selected file (Mac)
- [Feature] Upload item in Services menu of thirdparty programs main menu supporting files and folders (Mac)
- [Feature] Select bookmark to upload to when dragging files to application
- [Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)
- [Feature] Skip option not available in transfer prompt [#1159]
- [Feature] User interface to create symbolic links (SFTP) [#1724]
- [Feature] Support for Asia Pacific (Tokyo) location (S3)
- [Feature] Website endpoint configuration option for buckets (S3)
- [Feature] CDN configuration for website endpoints as custom origin (CloudFront)
- [Bugfix] Limit number of concurrent transfers (#5539, #5624)
- [Bugfix] Qeued transfers start in random order (#5632)