@@ -41,6 +41,9 @@
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.2">Version 4.0.2</a></strong><br/>
 <ul>
     <li>[Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)</li>
+    <li>[Feature] Transcript (SFTP) (<a
+            href="http://trac.cyberduck.ch/ticket/2944">#2944</a>)
+    </li>
     <li>[Bugfix] Incomplete transfer synchronizing root directory (WebDAV) (<a
             href="http://trac.cyberduck.ch/ticket/5662">#5662</a>)
     </li>
@@ -54,7 +57,14 @@
             href="http://trac.cyberduck.ch/ticket/5763">#5763</a>, <a
             href="http://trac.cyberduck.ch/ticket/5757">#5757</a>, <a
             href="http://trac.cyberduck.ch/ticket/5772">#5772</a>, <a
-            href="http://trac.cyberduck.ch/ticket/5771">#5771</a>)
+            href="http://trac.cyberduck.ch/ticket/5771">#5771</a>, <a
+            href="http://trac.cyberduck.ch/ticket/5590">#5590</a>)
+    </li>
+    <li>[Bugfix] Uploads larger than 100MB fail (Google Docs) (<a
+            href="http://trac.cyberduck.ch/ticket/5712">#5712</a>)
+    </li>
+    <li>[Bugfix] Replace password for private key fails (SFTP) (<a
+            href="http://trac.cyberduck.ch/ticket/5754">#5754</a>)
     </li>
 </ul>
 
